lessons/280/4-gateway-api/1-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
spec:
  replicas:
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order
          image: aputra/myapp-280:v1
          ports:
          - name: http
            containerPort: 8080
